clean up overflow issues

--- a/style.css
+++ b/style.css
@@ -2392,7 +2392,7 @@ img.lightbox-plus,
 
 .related-portfolio-post {
 	padding-top: 72px;
-	margin-bottom: 80px;
+	margin-bottom: 10px;
 }
 .related-portfolio-post .portfolio-slider-wrap {
 	padding-bottom: 41px;
